--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -4,9 +4,14 @@ body, html {
 }
 header {
   box-shadow: 0 0 3px #aaa;
+  position: fixed;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
 }
 section {
-  padding: 25px;
+  padding: 80px 25px 25px 25px;
+
 }
 .add-task {
   position: fixed;
